--- a/front/src/pages/Convertor/css/index.css
+++ b/front/src/pages/Convertor/css/index.css
@@ -6,6 +6,15 @@
     border-radius: 8px;
     padding: 20px;
     width: 400px;
+    margin-top:30px;
+}
+.error{
+    color: red;
+    border: 1px red solid;
+    padding: 20px;
+    border-radius: 8px;
+    margin:30px 0 20px 0;
+    width: 400px;
 }
 .cv-form > div {
     display: flex;
@@ -27,4 +36,5 @@
     text-align: center;
     border-radius: 8px;
     cursor: pointer;
+    border:0;
 }
