--- a/front/src/pages/Index/css/index.css
+++ b/front/src/pages/Index/css/index.css
@@ -105,26 +105,28 @@ footer {
   /* padding:10px  */
   flex-direction: column;
   margin-top:20px;
+  /* max-width: 100%; */
+  overflow: scroll;
+  /* display: table-column; */
 }
 
 .project__thead{
   display: flex;
   flex-direction: row;
   background-color: #ededed;
-  justify-content: space-evenly;
+  justify-content: start;
   gap:20px;
   align-items: center;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
+  width: 100%;
   /* height: 42px; */
-  padding: 15px;
+  /* padding: 15px; */
   border-bottom: 1px #ccc solid;
+  
 }
 
 .project__item{
   display: flex;
   flex-direction: row;
-  padding: 15px;
   justify-content: start;
   gap:20px;
   align-items: left;
@@ -133,4 +135,11 @@ footer {
 .project__item:hover{
   background-color: #ededed;
   cursor: pointer;
+}
+.project__name, .project__date{
+  min-width: 120px;
+  padding:10px;
+  overflow: hidden;
+  white-space: nowrap;
+  font-size: .6em;
 }
